refactor: collapse onnix tobe one compose
