# backend/docs/swagger.json
@@ -47,8 +47,8 @@
                             }
                         }
                     },
-                    "501": {
-                        "description": "Not Implemented",
+                    "503": {
+                        "description": "Service Unavailable",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
